--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
+  "name": "kerala-natpac-dashboard",
+  "version": "1.0.0",
+  "description": "Kerala NATPAC Travel Data Analytics Dashboard",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.8",
-    "chart.js": "^4.5.0",
-    "leaflet": "^1.9.4",
-    "react": "^19.1.1",
-    "react-bootstrap": "^2.10.10",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.8.0",
+    "bootstrap": "^5.3.0",
+    "react-bootstrap": "^2.7.0",
+    "chart.js": "^4.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
